compiler-core/src/cplusplus/tests/snapshots/gleam_core__cplusplus__tests__list__cons.snap
---
source: compiler-core/src/cplusplus/tests/list.rs
expression: "\npub fn cons(head: String, tail: List(String)) -> List(String) {\n    [head, ..tail]\n}"
---
#ifndef MY_PACKAGE_MY_MODULE_H_
#define MY_PACKAGE_MY_MODULE_H_

#include <gleam.h>

namespace my {
namespace module {

gleam::Ref<gleam::List> cons(gleam::String head, gleam::Ref<gleam::List> tail);

} // namespace my
} // namespace module

#endif // MY_PACKAGE_MY_MODULE_H_

---
#include "module.h"

namespace my {
namespace module {

gleam::Ref<gleam::List> cons(gleam::String head, gleam::Ref<gleam::List> tail) {
  return gleam::MakeList<gleam::String>({head}, tail);
};

} // namespace my
} // namespace module

